--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-alert-component": "^4.0.0",
     "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
+    "styled-listgroup-component": "^4.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
